fix home page spacing

--- a/survey-app/public/styles/site.css
+++ b/survey-app/public/styles/site.css
@@ -6858,8 +6858,9 @@ button.close {
   color: #000;
 }
 body {
-  padding-top: 70px;
+  padding-top: 50px;
 }
 #assessment h3 {
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
