--- a/survey-app/public/styles/site/_layout.styl
+++ b/survey-app/public/styles/site/_layout.styl
@@ -139,7 +139,8 @@
     color black
 
 body 
-    padding-top 70px
+    padding-top 50px
 
 #assessment h3
-    padding-bottom 20px
+    padding-top 10px
+    padding-bottom 10px
